# ClimateCritters

./: .gitignore  .nojekyll  CLAUDE.md  LAB_DEMO_AGENDA.md  PACKAGE_SUMMARY.md  README.md  _quarto.yml  env.yml  env_dev.yml  env_jpl.yml  env_setup_readme.md  index.html  index.qmd  objects.json  objects.txt  pyproject.toml  requirements.txt  robots.txt  search.json  setup.html  setup.py  sitemap.xml  versions.json
.binder/: environment.yml
.claude/: notebook_templates.md  paleobeasts_core.md  paleobeasts_signal_models.md
api/: BoxModelSpec.html  DampedSpring.html  DoublePendulum.html  EBM0D.html  EBM1DLat.html  EBMBase.html  ENSORechargeOscillator.html  Lorenz63.html  Lorenz96.html  Model3.html  Roessler.html  SimplePendulum.html  Stocker2003BipolarSeesaw.html  Stocker2003ExtendedSeaIceSeesaw.html  Stommel.html  TwoBoxCarbon.html  core.CCModel.html  core.CCOutput.html  core.Forcing.html  core.forcing.ForcingElement.html  core.forcing.ForcingSequence.html  core.forcing.Harmonic.html  core.forcing.Hold.html  core.forcing.Ramp.html  core.forcing.ResolvedSegment.html  index.html  utils.forcing.create_constant_forcing.html  utils.forcing.create_periodic_forcing.html  utils.forcing.create_piecewise_forcing.html  utils.forcing.create_sinusoid_forcing.html  utils.func.make_derivative_func.html  utils.func.smooth_and_interpolate.html  utils.noise.from_param.html  utils.noise.from_series.html  utils.resample.downsample.html  utils.solver.Solution.html  utils.solver.build_state_from_history.html  utils.solver.define_t_eval.html  utils.solver.euler_maruyama_method.html  (+8 more)
(+516 files in other folders)
