[project]
name = "climatecritters"
version = "0.1.0"
description = "ClimateCritters: A package for generating synthetic paleoclimate data"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [
    { name = "Jordan Landers" }
]

dependencies = [
    "pandas",
    "matplotlib",
    "pyleoclim",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["climatecritters"]
#exclude = ["archive2*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
